--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "prettier": "3.0.2",
     "prettier-plugin-packagejson": "2.4.5",
     "prettier-plugin-tailwindcss": "0.5.3",
+    "sass": "^1.68.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   },
